--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coopmeeting
+spring.datasource.url=jdbc:mysql://localhost:3306/coopmeeting?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
-spring.datasource.password=qwe123
+spring.datasource.password=root
 server.port=8080
